# FGC-WCR

./: CMakeLists.txt  README.md
FGC-WCR-FnnInferBoost/: CMakeLists.txt
FGC-WCR-FnnInferBoost/fnn_model/: model.pth
FGC-WCR-FnnInferBoost/fnn_modelgenerator/: testingData.mat  trainingData2.mat
FGC-WCR-FnnInferBoost/include/: data_IMU.csv
FGC-WCR-FnnInferBoost/include/MotionControl/: head.h  robotcontrol.h
FGC-WCR-FnnInferBoost/src/: main.cpp  test.cpp
FGC-WCR-FnnInferBoost/src/MotionControl/: controlhelper.cpp  gebot.cpp
FGC-WCR-fnnInferBoost/fnn_model/: fc1.weight_weight.txt
FGC-WCR-fnnInferBoost/fnn_modelgenerator/: quantized_model.pt  train.py  trainingData.mat
FGC-WCR-fnnInferBoost/fnn_src/: eigen_example.cpp
FGC-WCR-fnnInferBoost/include/: compensationrecord.csv
FGC-WCR-fnnInferBoost/src/: main.cpp  test.cpp
data/positionData/: dataProcess.ipynb
data/postureData/: XYZ_forwardNew_1.csv  XYZ_forwardNew_2.csv  XYZ_forwardNew_3.csv  XYZ_no_1.csv  XYZ_no_2.csv  XYZ_pull_1.csv
fnn_model/: qmodel.pth
fnn_modelgenerator/: dataGenerator.m  train.ipynb
fnn_src/: main.cpp
include/: JointAngleRecord.txt  data_Force.csv
include/MotionControl/: gebot.h
model/: fc1.bias_weight.txt  fc1.weight_weight.txt  fc2.bias_weight.txt  fc2.weight_weight.txt  model.pth
modelGenerator/: model.pth  qmodel.pth  train.ipynb  train.py
modelGenerator/.ipynb_checkpoints/: train-checkpoint.ipynb
scripts/: comp.m  dataGenerator.m
src/: eigen_example.cpp  main.cpp  main_old.cpp  test.cpp
src/MotionControl/: gebot.cpp
(+34 files in other folders)
