cmake_minimum_required(VERSION 2.8.9)
PROJECT(robot)

# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(/usr/local/include)
# set(Torch_DIR ~/libtorch/share/cmake/Torch)
# find_package(Torch REQUIRED)
# add_executable(torch_example ./src/main.cpp)
add_executable(eigen_example ./src/eigen_example.cpp)
# target_link_libraries(torch_example "${TORCH_LIBRARIES}")
# target_compile_options(torch_example PRIVATE -O3)
# set_property(TARGET torch_example PROPERTY CXX_STANDARD 17)
